--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@baiclab/elysia-typeorm",
   "description": "Plugin for Elysia for using TypeORM",
-  "version": "0.0.3",
+  "version": "0.0.1",
   "license": "MIT",
   "author": {
     "name": "wrightjin",
@@ -12,6 +12,7 @@
     "type": "git",
     "url": "https://github.com/baiclab/elysia-typeorm"
   },
+  "homepage": "https://github.com/baiclab/elysia-typeorm",
   "exports": {
     ".": "./src/index.ts"
   },
@@ -25,11 +26,12 @@
     "publish": "npm publish --access public"
   },
   "dependencies": {
-    "sqlite3": "^5.1.7",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "elysia": ">=1.0.22",
+    "sqlite3": "^5.1.7"
   },
   "peerDependencies": {
     "typescript": ">=5.0.0",
