--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["baiclab", "elysia", "typeorm", "wrightjin"]
+  "cSpell.words": ["baiclab", "elysia", "elysiajs", "typeorm", "wrightjin"]
 }
